# api-analisecurriculo

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/routes/: analyze.py  history.py
app/core/: config.py  exceptions.py  logging_config.py
app/domain/: models.py
app/infra/database/: connection.py  repositories.py
app/services/: analyzer.py  pdf_extractor.py
tests/: conftest.py  test_analyze.py
