[project]
name = "resume-analyzer-api"
version = "1.0.0"
description = "REST API for resume analysis with scoring, skill detection, and structured feedback"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
